# tbv

./: .gitignore  README.md  environment_linux.yml  environment_mac.yml  pretrained_model_info.py  setup.py
.github/scripts/: setup.sh
.github/workflows/: test-python.yml
labeled_data/: tbv_val_split_annotations.json
scripts/: eval_models.sh  generate_eval_timestamp_list.py  generate_map_change_video.py  generate_mseg_label_maps.py  launch_slurm_seamseg_inference.sh  run_dataset_rendering_job.py  run_seamseg_over_logs.py  seamseg_inference_1gpu.sh  test.py  train.py  visualize_training_examples.py
tbv/: eval_timestamps.py  rendering_config.py  scene_clusters.py  splits.py  training_config.py
tbv-raytracing/: CMakeLists.txt  setup.py  tbv_raytracing.cpp  tbv_raytracing.cu
tbv/common/: local_vector_map.py  tbv_lane_segment.py
tbv/configs/: train_2021_09_04_bev_synthetic_config_t5820.yaml
tbv/evaluation/: eval_map_change_detection.py
tbv/models/: early_fusion.py  late_fusion.py  no_fusion.py  resnet_factory.py  siamese_resnet.py
tbv/rendering/: bev_map_renderer.py  bev_sensor_utils.py  bev_vector_map_rendering_utils.py  (+7 more)
tests/: test_bev_vector_map_rendering_utils.py  test_crosswalk_renderer.py  test_frustum_ray_generation_utils.py  test_frustum_utils.py  test_histogram_matching.py  test_image_to_ground_correspondence.py  test_lidar_io.py  test_map_rendering_classes.py  test_mseg_interface.py  test_rendering_config.py  test_synthetic_crosswalk_generator.py  test_tbv_transform.py  test_training_config.py  test_triangle_grid_utils.py  test_triangulation_2d.py
(+75 files in other folders)
